--- a/index.html
+++ b/index.html
@@ -218,11 +218,11 @@
 							<div class="input-group-prepend">
 								<span class="input-group-text" id="basic-addon3">Read once every</span>
 							</div>
-							<input type="number" class="form-control text-center" id="scheduledReadInput1" aria-describedby="basic-addon3" placeholder="e.g. 12">
+							<input type="number" class="form-control text-center" id="scheduledReadInput1" aria-describedby="basic-addon3" placeholder="e.g. 2">
 							<div class="input-group-prepend">
 								<span class="input-group-text" id="basic-addon3" style="border-left: 0;">minutes for</span>
 							</div>
-							<input type="number" class="form-control text-center" id="scheduledReadInput2" aria-describedby="basic-addon3" placeholder="e.g. 15">
+							<input type="number" class="form-control text-center" id="scheduledReadInput2" aria-describedby="basic-addon3" placeholder="e.g. 30">
 							<div class="input-group-append">
 								<span class="input-group-text" id="basic-addon3" style="border-left: 0;">minutes.</span>
 							</div>
@@ -402,13 +402,13 @@
 						<div class="form-group row">
 							<label for="alertEmailInput" class="col-sm-3 col-form-label">Email</label>
 							<div class="col-sm-9">
-								<input type="email" class="form-control" id="alertEmailInput" placeholder="Email">
+								<input type="email" class="form-control" id="alertEmailInput" placeholder="Email" autocomplete="email">
 							</div>
 						</div>
 						<div class="form-group row">
 							<label for="alertPhoneInput" class="col-sm-3 col-form-label">Phone Number</label>
 							<div class="col-sm-9">
-								<input type="phone" class="form-control" id="alertPhoneInput" placeholder="No hyphens please (e.g. 2175551234)">
+								<input type="phone" class="form-control" id="alertPhoneInput" placeholder="No hyphens (e.g. 2175551234)" autocomplete="tel">
 							</div>
 						</div>
 						<div class="form-group row">
