--- a/index.html
+++ b/index.html
@@ -39,8 +39,6 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
 	<link rel="stylesheet" .sticky-toptype="text/css" href="mystyle.css">
 	<link href="https://use.fontawesome.com/releases/v5.0.2/css/all.css" rel="stylesheet"> <!--for the icons-->
-	<style>
-</style>	
 </head>
 <body>
 	<!-- Navbar  -->
@@ -366,6 +364,7 @@
 		<!-- End Graph Modal  -->
 	</div>
 	<!-- End Past Experiments Page  -->
+	<!-- Device Configuration Page  -->
 	<div id="DeviceConfig" class="hidden">
 		<div class="container-main d-flex justify-content-center text-center">
 			<div class="card" style="max-width: 50rem;">
@@ -375,7 +374,7 @@
 
 				<div class="card-body" id="DeviceSettingsCard">
 					<p class="card-text">Set up your Arduino now!</p>		
-					
+					<button id="connect">Connect</button>
 					<div class="alert alert-success hidden" role="alert" id="DeviceSettingsSaveAlert" style="padding: 4px; margin-top: 5px; font-size: .90em;">
 						<i class="fas fa-save"></i> Settings Applied!
 					</div>
@@ -383,6 +382,8 @@
 			</div>
 		</div>
 	</div>
+	<!-- End Device Configuration Page  -->
+	<!-- Alert Settings Page  -->
 	<div id="AlertSettings" class="hidden">
 		<div class="container-main d-flex justify-content-center text-center">
 			<div class="card" style="max-width: 50rem;">
@@ -507,6 +508,7 @@
 		</div>
 		<!-- End Invalid Phone Provider Modal  -->
 	</div>
+	<!-- End Alert Settings Page  -->
 
 
 </body>
