--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
 	<link rel="stylesheet" .sticky-toptype="text/css" href="mystyle.css">
 	<link href="https://use.fontawesome.com/releases/v5.0.2/css/all.css" rel="stylesheet"> <!--for the icons-->
+	<script src="https://cdn.rawgit.com/marcoschwartz/aREST.js/master/aREST.js"></script>
 </head>
 <body>
 	<!-- Navbar  -->
@@ -374,7 +375,7 @@
 
 				<div class="card-body" id="DeviceSettingsCard">
 					<p class="card-text">Set up your Arduino now!</p>		
-					<button id="connect">Connect</button>
+					<button id="startConnectionButton">Connect</button>
 					<div class="alert alert-success hidden" role="alert" id="DeviceSettingsSaveAlert" style="padding: 4px; margin-top: 5px; font-size: .90em;">
 						<i class="fas fa-save"></i> Settings Applied!
 					</div>
